--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -245,7 +245,7 @@ hr {
 }
 .nouveausupporter {
   font-weight: bold;
-  color: red;
+  color: #D64E26;
 }
 .logopremium, .logostandards {
   border: 1px solid #FBE5D6FF;
